Still same issue! Displaying some extra space in "Awaiting" signature setion on "Sginging" page with Portrait mode on "Ipad" device

--- a/assets/css/rtl-basic-mobile.css
+++ b/assets/css/rtl-basic-mobile.css
@@ -846,7 +846,7 @@ table.display td.time {
   @media only screen and (min-width: 768px){
   .rtl-sign-contracts{
     flex: 0.4 !important;
-    text-align: left !important;
+   
     }
   }
 
@@ -854,4 +854,8 @@ table.display td.time {
   .signature-wrapper-displayonly-signed .signed {
       background-position: right bottom !important;
   }  
+}
+
+.document-sign-page #audit-trail-wrapper .main .info .sign {
+    border: none;
 }
